# cicd

./: .gitignore  README.md  pyproject.toml  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
src/cicd/: factorial.py  main.py
tests/: test_factorial.py
