[metadata]
name = cicd
description = Learning CI/CD with Github actions
author = Ivan Pagnossin
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
	Programming Language :: Python 3.8
	Programming Language :: Python 3.9

[options]
packages =
	cicd
install_requires =
	numpy>=1.21
python_requires = >=3.8
package_dir =
	=src
zip_safe = no

[options.extras_require]
testing =
	flake8>=4.0
	mypy>=0.910
	pytest>=6.2
	pytest-cov>=3.0
	tox>=3.24

[options.package_data]
cicd = py.typed

[flake8]
max-line-length = 80

